my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ENAMEID/ENAMEID.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENAMEID.dml:9:1: In b
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENAMEID.dml:11:18: error ENAMEID: invalid name parameter value: '^invalid!'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENAMEID.dml:15:4: In c.r
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENAMEID.dml:17:22: error ENAMEID: invalid name parameter value: ''
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENAMEID.dml:23:9: In d.r.f
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENAMEID.dml:25:26: error EBTYPE: wrong type
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENAMEID.dml:25:26:   got:      int64
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENAMEID.dml:25:26:   expected: string
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENAMEID.dml:7:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ENAMEID.dml:32:13: error ENAMEID: invalid name parameter value: ''
